# Adaptive-CCL

./: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  design.md
docs/: multi_rank_design.md
libampccl/backend/: backend_base.h  fast_backend.cc  fast_backend.h  pcie_backend.cc  pcie_backend.h
libampccl/cache/: param_cache.h
libampccl/common/: config.h  log.h  op_key.h
libampccl/controller/: algo_base.h  algo_dcqcn.h  algo_factory.h  algo_tcp.h  controller.h
libampccl/core/: comm_init.cc  comm_init.h  domain.h  domain_key.h  domain_manager.h  planner.h  shm_store.cc  shm_store.h  stream_sync.cc  stream_sync.h  virtual_collective.h
libampccl/hook/: hccl_hook.cc  nccl_hook.cc
libampccl/telemetry/: stats.h  timer.h
scripts/: build.sh  build_with_pcie.sh
